EVEREST-77 API implementation (#11)
