# docs/spec/openapi.yml
@@ -613,6 +613,9 @@ components:
           example: minikube
         kubeconfig:
           type: string
+      required:
+        - name
+        - kubeconfig
     KubernetesCluster:
       type: object
       description: kubernetes object
@@ -628,18 +631,62 @@ components:
         type: object
         $ref: '#/components/schemas/KubernetesCluster'
     DatabaseClusterList:
-      type: array
-      items:
-        type: object
-        $ref: '#/components/schemas/DatabaseCluster'
+      description: DatabaseClusterList is an object that contains the list of the existing database clusters.
+      properties:
+        apiVersion:
+          description: 'APIVersion defines the versioned schema of this representation
+                  of an object. Servers should convert recognized schemas to the latest
+                  internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+          type: string
+        kind:
+          description: 'Kind is a string value representing the REST resource this
+                  object represents. Servers may infer this from the endpoint the client
+                  submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+          type: string
+        items:
+          type: array
+          $ref: '#/components/schemas/DatabaseCluster'
+        metadata:
+          type: object
+      type: object
     DatabaseEngineList:
-      type: array
-      items:
-        $ref: '#/components/schemas/DatabaseEngine'
+      description: DatabaseEngineList is an object that contains the list of the existing database engines.
+      properties:
+        apiVersion:
+          description: 'APIVersion defines the versioned schema of this representation
+                  of an object. Servers should convert recognized schemas to the latest
+                  internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+          type: string
+        kind:
+          description: 'Kind is a string value representing the REST resource this
+                  object represents. Servers may infer this from the endpoint the client
+                  submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+          type: string
+        items:
+          type: array
+          $ref: '#/components/schemas/DatabaseEngine'
+        metadata:
+          type: object
+      type: object
     DatabaseClusterRestoreList:
-      type: array
-      items:
-        $ref: '#/components/schemas/DatabaseClusterRestore'
+      description: DatabaseClusterRestoreList is an object that contains the list of the existing database cluster restores.
+      properties:
+        apiVersion:
+          description: 'APIVersion defines the versioned schema of this representation
+                  of an object. Servers should convert recognized schemas to the latest
+                  internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+          type: string
+        kind:
+          description: 'Kind is a string value representing the REST resource this
+                  object represents. Servers may infer this from the endpoint the client
+                  submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+          type: string
+        items:
+          type: array
+          $ref: '#/components/schemas/DatabaseClusterRestore'
+        metadata:
+          type: object
+      type: object
     SizeLimit:
       anyOf:
         - $ref: '#/components/schemas/Integer'
